many changes, mainly related to DRE outcome

--- a/report/pers_sched/latex/biometrics_submission/ReplyLetterFirstPage.tex
+++ b/report/pers_sched/latex/biometrics_submission/ReplyLetterFirstPage.tex
@@ -52,13 +52,14 @@ Erasmus University Medical Center\\PO Box 2040, 3000 CA Rotterdam\\ the Netherla
 
 We are writing to you with respect to the manuscript \#BIOM2017609M, titled ``Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients'' submitted to \emph{Biometrics} and the reports we received after its review. We would like to thank you for giving us the opportunity to submit a revised version of our paper that tackles the weaknesses of the previous version.
 
-Following the recommendations from the Reviewers, we have made several changes in the revised version of the manuscript. In particular, we updated the joint model fitted to the PRIAS dataset to account for non normal errors. To this end we assumed a t-distribution for errors. We also added more diagnostic graphs to show the fit of the model to the dataset. We added a section in the supplementary material to show that the joint model parameter estimates are not affected by the schedule of biopsies and PSA measurements, given that the latter two depend only upon the observed PSA values. In order to aid in medical decision making, we added discussion on suitable values of number of biopsies and offset. Lastly, we updated our graphs and their captions as per the suggestions of Reviewers. The previous version was 24 pages long and you have asked us to reduce that to 20 pages (including body of manuscript, acknowledgments and references). We have included new pieces of information according to the suggestions of the reviewers, and have also managed to reduce the length of the paper to 20 pages.
+Following the recommendations from the Reviewers, we have made several changes in the revised version of the manuscript. In particular, we updated the joint model fitted to the PRIAS dataset to account for non normal errors. To this end, we assumed a t-distribution for errors. We also added more diagnostic graphs to show the fit of the model to the dataset. We added a section in the supplementary material to show that the joint model parameter estimates are not affected by the schedule of biopsies and PSA measurements, given that the latter two depend only upon the observed PSA values. In order to aid in medical decision making, we discussed suitable values of the number of biopsies and offset in the revised version of the manuscript. Lastly, we updated our graphs and their captions as per the suggestions of the Reviewers. The previous version was 24 pages long and you have asked us to reduce that to 20 pages (including the body of manuscript, acknowledgments, and references). While we have included new pieces of information according to the suggestions of the reviewers,  we have managed to reduce the length of the paper to 20.4 pages. We hope that this is acceptable. Lastly, we have updated the title of our manuscript to ``Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients''.
 
 Please find enclosed a detailed point-by-point response to the Reviewers' comments.\\
 
 Yours sincerely,
 
 the Authors
+
 
 %===========================================
 
