--- a/report/pers_sched/latex/biometrics_submission/arxiv_submission_supplementary.tex
+++ b/report/pers_sched/latex/biometrics_submission/arxiv_submission_supplementary.tex
@@ -77,12 +77,12 @@
 
 
 \begin{document}
-\title{\textbf{Supplementary Materials for ``Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients''}}
+\title{\textbf{Supplementary Materials for ``Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients''}}
 
 \author[1,*]{Anirudh Tomer}
-\author[2]{Daan Nieboer }
-\author[3]{Monique J. Roobol }
-\author[2,4]{Ewout W. Steyerberg }
+\author[2]{Daan Nieboer}
+\author[3]{Monique J. Roobol}
+\author[2,4]{Ewout W. Steyerberg}
 \author[1]{Dimitris Rizopoulos}
 \affil[1]{Department of Biostatistics, Erasmus University Medical Center, the Netherlands}
 \affil[2]{Department of Public Health, Erasmus University Medical Center, the Netherlands}
