--- a/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
@@ -1,4 +1,4 @@
-% !TEX root =  ../../pers_schedules.tex 
+% !TEX root =  ../../main_manuscript.tex 
 
 \subsection{Estimation}
 \label{subsec : estimation}
@@ -14,10 +14,10 @@ However, as mentioned earlier, selection of the optimal biopsy time based on $E_
 \end{equation}
 Since there is no closed form solution available for the integrals in (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}), we approximate them using Gauss-Kronrod quadrature (see Web Appendix B). The variance depends both on last biopsy time $t$ and PSA history $\mathcal{Y}_j(s)$, as demonstrated in Section \ref{subsec : demo_prias_pers_schedule}.
 
-For schedules based on dynamic risk of GR, the choice of threshold $\kappa$ has important consequences because it dictates the timing of biopsies. Often it may depend on the amount of risk that is acceptable to the patient (if maximum acceptable risk is 5\%, $\kappa = 0.95$). When $\kappa$ cannot be chosen on the basis of the input of the patients, we propose to automate its choice. More specifically, given the time $t$ of latest biopsy we propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints}, discriminating between cases (patients who experience GR) and controls, is maximized. In JMs, a patient $j$ is predicted to be a case in the time window $\Delta t$ if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$, or a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep*{rizopoulosJMbayes, landmarking2017}. We choose $\Delta t$ to be one year. This is because, in AS programs at any point in time, it is of interest to identify and provide extra attention to patients who may obtain GR in the next one year. As for the choice of the binary classification accuracy measure, we chose $\mbox{F}_1$ score since it is in line with our goal to focus on potential cases in time window $\Delta t$. $\mbox{F}_1$ score combines both sensitivity and positive predictive value (PPV) and is defined as:
+For schedules based on dynamic risk of GR, the choice of threshold $\kappa$ has important consequences because it dictates the timing of biopsies. Often it may depend on the amount of risk that is acceptable to the patient (if maximum acceptable risk is 5\%, $\kappa = 0.95$). When $\kappa$ cannot be chosen on the basis of the input of the patients, we propose to automate its choice. More specifically, given the time $t$ of latest biopsy we propose to choose a $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints}, discriminating between cases (patients who experience GR) and controls, is maximized. In joint models, a patient $j$ is predicted to be a case in the time window $\Delta t$ if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$, or a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep*{rizopoulosJMbayes, landmarking2017}. We choose $\Delta t$ to be one year. This is because, in AS programs at any point in time, it is of interest to identify and provide extra attention to patients who may obtain GR in the next one year. As for the choice of the binary classification accuracy measure, we chose $\mbox{F}_1$ score since it is in line with our goal to focus on potential cases in time window $\Delta t$. The $\mbox{F}_1$ score combines both sensitivity and positive predictive value (PPV) and is defined as:
 \begin{align*}
-\mbox{F}_1(t, \Delta t, s) &= 2\frac{\mbox{TPR}(t, \Delta t, s)\ \mbox{PPV}(t, \Delta t, s)}{\mbox{TPR}(t, \Delta t, s) + \mbox{PPV}(t, \Delta t, s)},\\
-\mbox{TPR}(t, \Delta t, s) &= \mbox{Pr}\big\{\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid t < T^*_j \leq t + \Delta t\big\},\\
-\mbox{PPV}(t, \Delta t, s) &= \mbox{Pr}\big\{t < T^*_j \leq t + \Delta t \mid \pi_j(t + \Delta t \mid t,s) \leq \kappa \big\},
+\mbox{F}_1(t, \Delta t, s, \kappa) &= 2\frac{\mbox{TPR}(t, \Delta t, s, \kappa)\ \mbox{PPV}(t, \Delta t, s, \kappa)}{\mbox{TPR}(t, \Delta t, s, \kappa) + \mbox{PPV}(t, \Delta t, s, \kappa)},\\
+\mbox{TPR}(t, \Delta t, s, \kappa) &= \mbox{Pr}\big\{\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid t < T^*_j \leq t + \Delta t\big\},\\
+\mbox{PPV}(t, \Delta t, s, \kappa) &= \mbox{Pr}\big\{t < T^*_j \leq t + \Delta t \mid \pi_j(t + \Delta t \mid t,s) \leq \kappa \big\},
 \end{align*}
-where $\mbox{TPR}(\cdot)$ and $\mbox{PPV}(\cdot)$ denote time dependent true positive rate (sensitivity) and positive predictive value (precision), respectively. The estimation for both is similar to the estimation of $\mbox{AUC}(t, \Delta t, s)$ given by \citet{landmarking2017}. Since a high $\mbox{F}_1$ score is desired, the corresponding value of $\kappa$ is $\argmax_{\kappa} \mbox{F}_1(t, \Delta t, s)$. We compute the latter using a grid search approach. That is, first $\mbox{F}_1$ score is computed using the available dataset over a fine grid of $\kappa$ values between 0 and 1, and then $\kappa$ corresponding to the highest $\mbox{F}_1$ score is chosen. Furthermore, in this paper we use $\kappa$ chosen only on the basis of $\mbox{F}_1$ score.
+where $\mbox{TPR}(\cdot)$ and $\mbox{PPV}(\cdot)$ denote time dependent true positive rate (sensitivity) and positive predictive value (precision), respectively. The estimation for both is similar to the estimation of $\mbox{AUC}(t, \Delta t, s)$ given by \citet{landmarking2017}. Since a high $\mbox{F}_1$ score is desired, the corresponding value of $\kappa$ is $\argmax_{\kappa} \mbox{F}_1(t, \Delta t, s, \kappa)$. We compute the latter using a grid search approach. That is, first the $\mbox{F}_1$ score is computed using the available dataset over a fine grid of $\kappa$ values between 0 and 1, and then $\kappa$ corresponding to the highest $\mbox{F}_1$ score is chosen. Furthermore, in this paper we use $\kappa$ chosen only on the basis of the $\mbox{F}_1$ score.
