--- a/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/ppd_time_to_GR.tex
@@ -1,4 +1,4 @@
-% !TEX root =  ../pers_schedules.tex 
+% !TEX root =  ../main_manuscript.tex 
 
 \subsection{Posterior Predictive Distribution for Time to GR}
 \label{subsec : ppd_time_to_GR}
