--- a/report/pers_sched/latex/biometrics_submission/supplementary/demonstration_911_2340.tex
+++ b/report/pers_sched/latex/biometrics_submission/supplementary/demonstration_911_2340.tex
@@ -2,11 +2,11 @@
 \section{Personalized Schedules for the Demonstration Patients from PRIAS.}
 \label{sec : demo_3174_2340}
 
-In this section we demonstrate the application of personalized schedules on patients from PRIAS study. In Section \ref{subsec : demo_prias_pers_schedule} of the main manuscript we demonstrated personalized schedules for the first demonstration patient. Here we demonstrate them for the remaining two patients. To this end, we first show the fitted profiles of the 3 patients using their entire follow up period (Web Figure \ref{fig : fitted_demo_patients_t3}).
+In this section we demonstrate the application of personalized schedules on patients from PRIAS study. In Section \ref{subsec : demo_prias_pers_schedule} of the main manuscript we demonstrated personalized schedules for the first demonstration patient. Here we demonstrate them for the remaining two patients. To this end, we first show the fitted profiles of the three patients using their entire follow up period (Web Figure \ref{fig : fitted_demo_patients_t3}).
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/model_fit/fitted_demo_patients_t3.eps}}
-\caption{Fitted versus observed $\log_2 \mbox{PSA}$ profiles for the three demonstration patients, at two different time points. The fitted profiles utilize information from both the observed PSA levels and time of latest biopsy.}
+\caption{Fitted versus observed $\log_2 \mbox{PSA}$ profiles for the three demonstration patients over the entire follow-up period. The fitted profiles utilize information from both the observed PSA levels and time of latest biopsy.}
 \label{fig : fitted_demo_patients_t3}
 \end{figure}
 
@@ -14,7 +14,7 @@ The evolution of PSA, repeat biopsy history and proposed times of biopsies for t
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/prias_demo/case_3174_t3.eps}}
-\caption{Top panel: Fitted versus observed $\log_2 \mbox{PSA}$ profile, history of repeat biopsies and corresponding personalized schedules for the second demonstration patient. Bottom Panel: History of repeat biopsies and $\mbox{SD}_g(T^*_j) = \sqrt{\mbox{var}_g(T^*_j)}$ over time for the second demonstration patient.}
+\caption{Top panel: Fitted versus observed $\log_2 \mbox{PSA}$ profile, history of repeat biopsies and corresponding personalized schedules for the second demonstration patient. Bottom Panel: History of repeat biopsies and standard deviation $\mbox{SD}_g(T^*_j) = \sqrt{\mbox{var}_g(T^*_j)}$ of the posterior predictive distribution of time of GR over time for the second demonstration patient.}
 \label{fig : prias_demo_pid_3174}
 \end{figure}
 
