--- a/report/pers_sched/latex/biometrics_submission/supplementary_material.tex
+++ b/report/pers_sched/latex/biometrics_submission/supplementary_material.tex
@@ -51,7 +51,7 @@
 \usetikzlibrary{shapes.geometric, arrows, positioning}
 %%%%% PLACE YOUR OWN MACROS HERE %%%%%
 
-\externaldocument{pers_schedules}
+\externaldocument{main_manuscript}
 
 \def\bSig\mathbf{\Sigma}
 \newcommand{\VS}{V\&S}
@@ -106,7 +106,7 @@
 %  Also consult a recent issue of the journal for examples of formatting.
 
 \title[Supplementary Materials  for ``Personalized Schedules'']
-{Web-based Supplementary Materials for ``Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients''}
+{Web-based Supplementary Materials for ``Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients''}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
