--- a/report/pers_sched/latex/biometrics_submission/main_manuscript.tex
+++ b/report/pers_sched/latex/biometrics_submission/main_manuscript.tex
@@ -86,8 +86,8 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients]
-{Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients}
+\title[Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients]
+{Personalized Schedules for Surveillance of Low-Risk Prostate Cancer Patients}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -276,9 +276,6 @@ Accepted March} 0000.}
 \section*{Supplementary Materials}
 
 Web Appendix A, B, and C, D referenced in Section~\ref{sec : jm_framework}, Section~\ref{subsec : estimation} and Section~\ref{sec : pers_schedule_PRIAS}, respectively, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
-
-%Web Appendix A and C, referenced in Section~\ref{sec : jm_framework} and  Section~\ref{sec : pers_schedule_PRIAS}  respectively, and the derivation of Equations ~\ref{eq : expected_time_survprob} and ~\ref{eq : var_time_survprob} in Web Appendix B, are available with
-%this paper at the Biometrics website on Wiley Online Library.\vspace*{-8pt}
 
 %  Here, we create the bibliographic entries manually, following the
 %  journal style.  If you use this method or use natbib, PLEASE PAY
