--- a/report/pers_sched/latex/biometrics_submission/mainmatter/choosing_schedule.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/choosing_schedule.tex
@@ -1,8 +1,8 @@
-% !TEX root =  ../pers_schedules.tex
+% !TEX root =  ../main_manuscript.tex
 
 \section{Evaluation of Schedules}
 \label{sec : choosing_schedule}
-In order to compare various schedules of biopsies, we require measures of their efficacy. We propose to use two measures, namely the number of biopsies (burden) $N^S_j \geq 1$ a schedule $S$ conducts for the $j$-th patient to detect GR, and the offset $O^S_j \geq 0$ by which it overshoots $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^S_j}} - T^*_j$, where $T^S_{j{N^S_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^S_j, O^S_j)$ of the number of biopsies and the offset. The least burdensome scenario is when $N^S_j=1$ and $O^S=0$. Hence, realistically we should select a schedule with a low mean number of biopsies $E(N^S_j)$ as well a low mean offset $E(O^S_j)$. It is also desired that a schedule has low variance for both the number of biopsies $\mbox{var}(N^S_j)$, and offset $\mbox{var}(O^S_j)$, so that the schedule works similarly for most patients. 
+In order to compare various schedules of biopsies, we require measures of their efficacy. We propose to use two measures, namely the number of biopsies (burden) $N^S_j \geq 1$ a schedule $S$ conducts for the $j$-th patient to detect GR, and the offset $O^S_j \geq 0$ by which it overshoots $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^S_j}} - T^*_j$, where $T^S_{j{N^S_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^S_j, O^S_j)$ of the number of biopsies and the offset. The least burdensome scenario is when $N^S_j=1$ and $O^S=0$. Hence, realistically we should select a schedule with a low mean number of biopsies $E(N^S_j)$ as well a low mean offset $E(O^S_j)$. It is also desired that a schedule has a low variance for both the number of biopsies $\mbox{var}(N^S_j)$, and offset $\mbox{var}(O^S_j)$, so that the schedule works similarly for most patients. 
 
 \subsection{Choosing a Schedule}
 \label{subsec : optimal_schedule}
