--- a/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/loss_functions.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/loss_functions.tex
@@ -1,4 +1,4 @@
-% !TEX root =  ../pers_schedules.tex 
+% !TEX root =  ../main_manuscript.tex 
 
 \subsection{Loss Functions}
 \label{subsec : loss_functions}
@@ -41,4 +41,4 @@ L_{k_1, k_2}(T^*_j, u) =
 \end{equation*}
 where $k_1, k_2$ are constants parameterizing the loss function. The posterior expected loss $E_g\big\{L_{k_1, k_2}(T^*_j, u)\big\}$ obtains its minimum at $u = \pi_j^{-1}\big\{k_1/{(k_1 + k_2)} \mid t,s \big\}$ \citep{robertBayesianChoice}. The choice of the two constants $k_1$ and $k_2$ is equivalent to the choice of $\kappa = {k_1}/{(k_1 + k_2)}$.
 
-In practice, for some patients we may not have sufficient information to accurately estimate their PSA profile. The resulting high variance of $g(T^*_j)$ could lead to a mean (or median) time of GR which overshoots the true $T_j^*$ by a big margin. In such cases, the approach based on dynamic risk of GR with smaller risk thresholds is more risk averse and thus could be more robust to large overshooting margins. This consideration leads us to a hybrid approach, namely, to select $u$ using dynamic risk of GR based approach when the spread of $g(T_j^*)$ is large, while using $E_g(T^*_j)$ or $\mbox{median}_g(T^*_j)$ when the spread of $g(T_j^*)$ is small. What constitutes a large spread will be application-specific. In PRIAS, within the first 10 years, the maximum possible delay in detection of GR is three years. Thus we propose that if the difference between the 0.025 quantile of $g(T^*_j)$, and $E_g(T^*_j)$ or $\mbox{median}_g(T^*_j)$ is more than three years then proposals based on dynamic risk of GR be used instead.
+In practice, for some patients, we may not have sufficient information to accurately estimate their PSA profile. The resulting high variance of $g(T^*_j)$ could lead to a mean (or median) time of GR which overshoots the true $T_j^*$ by a big margin. In such cases, the approach based on the dynamic risk of GR with smaller risk thresholds is more risk-averse and thus could be more robust to large overshooting margins. This consideration leads us to a hybrid approach, namely, to select $u$ using dynamic risk of GR based approach when the spread of $g(T_j^*)$ is large, while using $E_g(T^*_j)$ or $\mbox{median}_g(T^*_j)$ when the spread of $g(T_j^*)$ is small. What constitutes a large spread will be application-specific. In PRIAS, within the first 10 years, the maximum possible delay in detection of GR is three years. Thus we propose that if the difference between the 0.025 quantile of $g(T^*_j)$, and $E_g(T^*_j)$ or $\mbox{median}_g(T^*_j)$ is more than three years then proposals based on the dynamic risk of GR be used instead.
