--- a/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
+++ b/report/pers_sched/latex/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
@@ -1,7 +1,7 @@
-% !TEX root =  ../pers_schedules.tex 
+% !TEX root =  ../main_manuscript.tex 
 \section{Personalized Schedules for Repeat Biopsies}
 \label{sec : pers_sched_approaches}
-We intend to use the JM fitted to $\mathcal{D}_n$, to create personalized schedules of biopsies. To this end, let us assume that a schedule is to be created for a new patient $j$, who is not present in $\mathcal{D}_n$. Let $t$ be the time of his latest biopsy, and $\mathcal{Y}_j(s)$ denote his historical PSA measurements up to time $s$. The goal is to find the optimal time $u > \mbox{max}(t,s)$ of the next biopsy.
+We intend to use the joint model fitted to $\mathcal{D}_n$, to create personalized schedules of biopsies. To this end, let us assume that a schedule is to be created for a new patient $j$, who is not present in $\mathcal{D}_n$. Let $t$ be the time of his latest biopsy, and $\mathcal{Y}_j(s)$ denote his historical PSA measurements up to time $s$. The goal is to find the optimal time $u > \mbox{max}(t,s)$ of the next biopsy.
 
 \input{mainmatter/pers_sched_framework/ppd_time_to_GR}
 \input{mainmatter/pers_sched_framework/loss_functions}
@@ -9,7 +9,7 @@ We intend to use the JM fitted to $\mathcal{D}_n$, to create personalized schedu
 
 \subsection{Algorithm}
 \label{subsec : pers_sched_algorithm}
-When a biopsy gets scheduled at a time $u < T^*_j$, then GR is not detected at $u$ and at least one more biopsy is required at an optimal time $u^{new} > \mbox{max}(u,s)$. This process is repeated until GR is detected. To aid in medical decision making, we elucidate this process via an algorithm in Figure \ref{fig : sched_algorithm}. Since AS programs strongly advise that two biopsies have a gap of at least one year, when $u - t < 1$, the algorithm postpones $u$ to $t + 1$, because it is the time nearest to $u$, at which the one year gap condition is satisfied.
+When a biopsy gets scheduled at a time $u < T^*_j$, then GR is not detected at $u$ and at least one more biopsy is required at an optimal time $u^{new} > \mbox{max}(u,s)$. This process is repeated until GR is detected. To aid in medical decision making, we elucidate this process via an algorithm in Figure \ref{fig : sched_algorithm}. AS programs strongly advise that two biopsies have a gap of at least one year. Thus, when $u - t < 1$, the algorithm postpones $u$ to $t + 1$, because it is the time nearest to $u$, at which the one-year gap condition is satisfied.
 
 %When submitting replace figure with figure* to make it span an entire column
 %With referee option it gives an error
