--- a/report/pers_sched/latex/biometrics_submission/supplementary/jm_param_estimation.tex
+++ b/report/pers_sched/latex/biometrics_submission/supplementary/jm_param_estimation.tex
@@ -1,9 +1,9 @@
 % !TEX root =  ../supplementary.tex
-\section{Joint Model for Time to Event and Longitudinal Outcomes}
+\section{Joint Model for Time-to-Event and Longitudinal Outcomes}
 \label{web_sec : jm_framework}
-We start with a short introduction of the joint modeling (JM) framework we will use in our following developments. Let $T_i^*$ denote the true Gleason reclassification (GR) time for the $i$-th patient and let $S$ be the schedule of his biopsies. Let the vector of the time of biopsies be denoted by $T_i^S = \{T^S_{i0}, T^S_{i1}, \ldots, T^S_{i{N_i^S}}; T^S_{ij} < T^S_{ik}, \forall j<k\}$, where $N_i^S$ are the total number of biopsies conducted. Because biopsy schedules are periodical, $T_i^*$ cannot be observed directly and it is only known to fall in an interval $l_i < T_i^* \leq r_i$, where $l_i = T^S_{i{N_i^S - 1}}, r_i = T^S_{i{N_i^S}}$ if GR is observed, and $l_i = T^S_{i{N_i^S}}, r_i=\infty$ if GR is not observed yet. Further let $\bmath{y}_i$ denote the $n_i \times 1$ vector of PSA levels for the $i$-th patient. For a sample of $n$ patients the observ{}ed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
+We start with a short introduction of the joint modeling framework we will use in our following developments. Let $T_i^*$ denote the true Gleason reclassification (GR) time for the $i$-th patient and let $S$ be the schedule of his biopsies. Let the vector of the time of biopsies be denoted by $T_i^S = \{T^S_{i0}, T^S_{i1}, \ldots, T^S_{i{N_i^S}}; T^S_{ij} < T^S_{ik}, \forall j<k\}$, where $N_i^S$ are the total number of biopsies conducted. Because biopsy schedules are periodical, $T_i^*$ cannot be observed directly and it is only known to fall in an interval $l_i < T_i^* \leq r_i$, where $l_i = T^S_{i{N_i^S - 1}}, r_i = T^S_{i{N_i^S}}$ if GR is observed, and $l_i = T^S_{i{N_i^S}}, r_i=\infty$ if GR is not observed yet. Further let $\bmath{y}_i$ denote the $n_i \times 1$ vector of prostate-specific antigen (PSA) levels for the $i$-th patient. For a sample of $n$ patients the observ{}ed data is denoted by $\mathcal{D}_n = \{l_i, r_i, \bmath{y}_i; i = 1, \ldots, n\}$.
 
-The longitudinal outcome of interest, namely PSA level, is continuous in nature and thus to model it the JM utilizes a linear mixed effects model (LMM) of the form:
+The longitudinal outcome of interest, namely PSA level, is continuous in nature and thus to model it the joint model utilizes a linear mixed effects model (LMM) of the form:
 \begin{equation*}
 \begin{split}
 y_i(t) &= m_i(t) + \varepsilon_i(t)\\
@@ -12,7 +12,7 @@ y_i(t) &= m_i(t) + \varepsilon_i(t)\\
 \end{equation*}
 where $\bmath{x}_i(t)$ and $\bmath{z}_i(t)$ denote the row vectors of the design matrix for fixed and random effects, respectively. The fixed and random effects are denoted by $\bmath{\beta}$ and $\bmath{b}_i$, respectively. The random effects are assumed to be normally distributed with mean zero and $q \times q$ covariance matrix $\bmath{D}$. The true and unobserved, error free PSA level at time $t$ is denoted by $m_i(t)$. The error $\varepsilon_i(t)$ is assumed to be t-distributed with three degrees of freedom and scale $\sigma$ (see \ref{subsec : t_dist_choice}), and is independent of the random effects $\bmath{b}_i$.
 
-To model the effect of PSA on hazard of GR, JMs utilize a relative risk sub-model. The hazard of GR for patient $i$ at any time point $t$, denoted by $h_i(t)$, depends on a function of subject specific linear predictor $m_i(t)$ and/or the random effects:
+To model the effect of PSA on hazard of GR, joint models utilize a relative risk sub-model. The hazard of GR for patient $i$ at any time point $t$, denoted by $h_i(t)$, depends on a function of subject specific linear predictor $m_i(t)$ and/or the random effects:
 \begin{align*}
 h_i(t \mid \mathcal{M}_i(t), \bmath{w}_i) &= \lim_{\Delta t \to 0} \frac{\mbox{Pr}\big\{t \leq T^*_i < t + \Delta t \mid T^*_i \geq t, \mathcal{M}_i(t), \bmath{w}_i\big\}}{\Delta t}\\
 &=h_0(t) \exp\big[\bmath{\gamma}^T\bmath{w}_i + f\{\mathcal{M}_i(t), \bmath{b}_i, \bmath{\alpha}\}\big], \quad t>0,
@@ -35,7 +35,7 @@ where $B_q(t, \bmath{v})$ denotes the $q$-th basis function of a B-spline with k
 \clearpage
 
 \subsection{Parameter Estimation}
-We estimate parameters of the JM using Markov chain Monte Carlo (MCMC) methods under the Bayesian framework. Let $\bmath{\theta}$ denote the vector of the parameters of the JM. The JM postulates that given the random effects, time to GR and longitudinal responses taken over time are all mutually independent. Under this assumption the posterior distribution of the parameters is given by:
+We estimate parameters of the joint model using Markov chain Monte Carlo (MCMC) methods under the Bayesian framework. Let $\bmath{\theta}$ denote the vector of the parameters of the joint model. The joint model postulates that given the random effects, time to GR and longitudinal responses taken over time are all mutually independent. Under this assumption the posterior distribution of the parameters is given by:
 \begin{align*}
 p(\bmath{\theta}, \bmath{b} \mid \mathcal{D}_n) & \propto \prod_{i=1}^n p(l_i, r_i, \bmath{y}_i \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{b}_i \mid \bmath{\theta}) p(\bmath{\theta})\\
 & \propto \prod_{i=1}^n p(l_i, r_i \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{y}_i \mid \bmath{b}_i, \bmath{\theta}) p(\bmath{b}_i \mid \bmath{\theta}) p(\bmath{\theta}),\\
@@ -59,9 +59,9 @@ We use independent normal priors with zero mean and variance 100 for the fixed e
 \clearpage
 \subsection{Interval Censoring in Time of Gleason Reclassification}
 \label{subsec : int_censoring_fulllikelihood_proof}
-The true time of GR $T^*_i$ is not known for any of the patients. In order to detect GR, PRIAS uses a fixed schedule of biopsies wherein biopsies are conducted at year one, year four, year seven and year ten of follow-up, and every five years thereafter. However, PRIAS switches to a more frequent annual biopsy schedule for faster progressing patients. These are patients with PSA doubling time (PSA-DT) of less than 10 years. The latter is measured as the inverse of the slope of the regression line through the base two logarithm of PSA values. Thus, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values. 
+The true time of GR $T^*_i$ is not known for any of the patients. In order to detect GR, PRIAS uses a fixed schedule of biopsies wherein biopsies are conducted at year one, year four, year seven and year ten of follow-up, and every five years thereafter. However, PRIAS switches to a more frequent annual biopsy schedule for faster-progressing patients. These are patients with PSA doubling time (PSA-DT) of less than 10 years. The latter is measured as the inverse of the slope of the regression line through the base two logarithm of PSA values. Thus, the interval $l_i < T_i^* \leq r_i$ in which GR is detected depends on the observed PSA values. 
 
-It is natural to question in this scenario if the parameters of the JM are affected by PSA-DT dependent interval censoring. However, because the parameters of the JM are estimated using a full likelihood approach \citep{tsiatis2004joint}, the JM allows the schedule of biopsies to depend upon the observed PSA values (e.g., via PSA-DT), under the condition that the model is correctly specified (we discuss this aspect in \ref{sec : param_estimates_jm_fit_prias}). To show this, consider the following full general specification of the JM that we use. Let $\boldsymbol{y}_i$ denote the observed PSA measurements for the $i$-th patient, and $l_i, r_i$ denote the two time points of the interval in which GR occurs for the $i$-th patient. In addition let $T_i^S$ and $\mathcal{V}_i$ denote the schedule of biopsies and schedule of PSA measurements, respectively. Under the assumption that both of these schedules may depend upon only the observed $\boldsymbol{y}_i$, the joint likelihood of all four processes is given by:
+It is natural to question in this scenario if the parameters of the joint model are affected by PSA-DT dependent interval censoring. However, because the parameters of the joint model are estimated using a full likelihood approach \citep{tsiatis2004joint}, the joint model allows the schedule of biopsies to depend upon the observed PSA values (e.g., via PSA-DT), under the condition that the model is correctly specified (we discuss this aspect in \ref{sec : param_estimates_jm_fit_prias}). To show this, consider the following full general specification of the joint model that we use. Let $\boldsymbol{y}_i$ denote the observed PSA measurements for the $i$-th patient, and $l_i, r_i$ denote the two time points of the interval in which GR occurs for the $i$-th patient. In addition let $T_i^S$ and $\mathcal{V}_i$ denote the schedule of biopsies and schedule of PSA measurements, respectively. Under the assumption that both of these schedules may depend upon only the observed $\boldsymbol{y}_i$, the joint likelihood of all four processes is given by:
 \begin{equation}
 p(\boldsymbol{y}_i, l_i, r_i, T_i^S, \mathcal{V}_i \mid \boldsymbol{\theta}, \boldsymbol{\psi}) = p(\boldsymbol{y}_i, l_i, r_i \mid \theta) \times p(T_i^S, \mathcal{V}_i \mid \boldsymbol{y}_i, \boldsymbol{\psi}).
 \end{equation}
