--- a/report/pers_sched/latex/biometrics_submission/supplementary/source_code.tex
+++ b/report/pers_sched/latex/biometrics_submission/supplementary/source_code.tex
@@ -1,5 +1,5 @@
 % !TEX root =  ../supplementary.tex
-\section{Source code}
+\section{Source Code}
 The source code for the joint model fitted to the PRIAS data set can be found at:\\
 \url{https://goo.gl/phQkxG}\\
 The source code for the simulation study can be found at:\\
